Fix signup login bar spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -266,7 +266,8 @@ margin-left: 20px;
   position: relative;
   /* top: 13px; */
   /* width: 80%; */
-  margin-right: 40px;
+  /* margin-right: 40px; */
+  margin: 28px 40px;
 }
 
 .login-prompt {
@@ -379,7 +380,7 @@ button:hover {
 .show-page-top-header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   height:130px;
   border-bottom: 1px solid lightgray;
@@ -388,7 +389,7 @@ button:hover {
 
 .show-page-top-header div {
   position: relative;
-  top: -10%;
+  /* top: -10%; */
 }
 
 .show-page-logo-container {
@@ -396,6 +397,7 @@ button:hover {
   width: 71.19px;
   left: 2%;
   position: relative;
+  margin-top: 16px;
 }
 .show-page-logo-link {
   position: relative;
@@ -408,7 +410,7 @@ button:hover {
   position: relative;
   min-width: 420px;
   max-width: 420px;
-  /* top: -8%; */
+  /* top: 16px; */
 }
 
 .non-frontpage-login .login-button-list {
@@ -1038,6 +1040,7 @@ button:hover {
 .search-bar-container {
   width: 500px;
   margin-left: 20px;
+  margin-top: 28px;
 }
 
 .search-bar-input {
